fix markup on small screens

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -4,10 +4,6 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
-  .row{
-    margin-right: 0px;
-    margin-left: 0px;
-  }
 }
 
 p, ol, ul, td {
